Fix glyph stretching.

--- a/css/glyph.less
+++ b/css/glyph.less
@@ -11,27 +11,27 @@
 .glyph {
     background-repeat: no-repeat;
     display: inline-block;
-    vertical-align: baseline;
+    vertical-align: text-bottom;
     line-height: 28px;
     margin: 2px;
 }
 
 .glyph-envelope {
-    .at2x('../img/glyphicons_010_envelope.png', 28px, 28px);
+    .at2x('../img/glyphicons_010_envelope.png', 24px, 16px);
 }
 
 .glyph-search {
-    .at2x('../img/glyphicons_027_search.png', 28px, 28px);
+    .at2x('../img/glyphicons_027_search.png', 24px, 24px);
 }
 
 .glyph-stats {
-    .at2x('../img/glyphicons_040_stats.png', 28px, 28px);
+    .at2x('../img/glyphicons_040_stats.png', 26px, 25px);
 }
 
 .glyph-file {
-    .at2x('../img/glyphicons_036_file.png', 28px, 28px);
+    .at2x('../img/glyphicons_036_file.png', 19px, 24px);
 }
 
 .glyph-user {
-    .at2x('../img/glyphicons_003_user.png', 28px, 28px);
+    .at2x('../img/glyphicons_003_user.png', 23px, 22px);
 }
